Fixed right-hand side navbar which rendered incorrectly on Safari.

--- a/app/assets/stylesheets/platters.scss
+++ b/app/assets/stylesheets/platters.scss
@@ -37,7 +37,13 @@ html {
   }
 }
 
-.footer {
+#platters-header {
+  .sign-up-btn {
+    margin: 0.5em 1em 0 0.5em;
+  }
+}
+
+#platters-footer {
   position: absolute;
   bottom: 0;
   width: 100%;
